--- a/jogadores-gremio/src/App.scss
+++ b/jogadores-gremio/src/App.scss
@@ -4,3 +4,12 @@
   padding: 0;
   background-color: #0ea5e9;
 }
+// html {
+//     width: 100vw;
+//     height: 100vh;
+// }
+// .mainApp {
+//   height: 100%;
+//   display: flex;
+//   flex-direction: column;
+// }
