--- a/jogadores-gremio/src/components/Body/style.scss
+++ b/jogadores-gremio/src/components/Body/style.scss
@@ -15,6 +15,7 @@ $borderColor: $defaultFontColor;
     // height: 7vh;
     padding: 10px;
     max-width: 170px;
+    border: none;
     &:hover {
         transform: translateY(-5px);
         box-shadow: 0 0 10px 2px #27272ad3;
